--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
   },
   "homepage": "https://github.com/burlakilia/js_20180219#readme",
   "dependencies": {
-    "sass": "^1.2.0",
-    "static-server": "^2.2.1",
-    "webpack": "^2.3.2",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "pug": "^2.0.0-rc.1",
-    "pug-loader": "^2.3.0"
+    "pug-loader": "^2.3.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "sass": "^1.2.0",
+    "static-server": "^2.2.1",
+    "webpack": "^2.3.2"
+  },
+  "devDependencies": {
+    "babel-preset-react": "^6.3.13"
   }
 }
